--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@nuxtjs/google-analytics": "^2.2.0",
     "cross-env": "^5.2.0",
+    "jquery": "^3.4.1",
     "nuxt": "^2.4.0",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.18.9",
+    "sass-loader": "^7.1.0"
   }
 }
