--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/component-cache": "^1.1.4",
     "@nuxtjs/google-analytics": "^2.2.0",
     "cross-env": "^5.2.0",
     "jquery": "^3.4.1",
@@ -18,7 +19,6 @@
     "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
     "sass-loader": "^7.1.0"
   }
