--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^5.2.0",
     "jquery": "^3.4.1",
     "nuxt": "^2.4.0",
+    "vue2-google-maps": "^0.10.6",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
