setting up all pages

--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxtjs/component-cache": "^1.1.4",
     "@nuxtjs/google-analytics": "^2.2.0",
-    "cross-env": "^5.2.0",
     "jquery": "^3.4.1",
     "nuxt": "^2.4.0",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "nodemon": "^1.18.9",
-    "sass-loader": "^7.1.0"
+    "push-dir": "^0.4.1"
   }
 }
