--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
-    "push-dir": "^0.4.1"
+    "push-dir": "^0.4.1",
+    "sass-loader": "^7.1.0"
   }
 }
