--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/google-analytics": "^2.2.0",
     "jquery": "^3.4.1",
     "nuxt": "^2.4.0",
+    "vue-scrollto": "^2.15.0",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
