--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "dependencies": {
     "@nuxtjs/component-cache": "^1.1.4",
     "@nuxtjs/google-analytics": "^2.2.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.20",
     "jquery": "^3.4.1",
     "nuxt": "^2.7.1",
+    "vue-fancybox": "^1.0.3",
+    "vue-gallery": "^2.0.0",
     "vue-scrollto": "^2.15.0",
     "vuex": "^3.1.1"
   },
