--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "vue-fancybox": "^1.0.3",
     "vue-gallery": "^2.0.0",
     "vue-scrollto": "^2.15.0",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/pwa": "^2.6.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
