--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-brands-svg-icons": "^5.8.2",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
+    "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/component-cache": "^1.1.4",
     "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/pwa": "^2.6.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.20",
     "jquery": "^3.4.1",
     "nuxt": "^2.7.1",
+    "nuxt-fontawesome": "^0.4.0",
     "vue-fancybox": "^1.0.3",
     "vue-gallery": "^2.0.0",
     "vue-scrollto": "^2.15.0",
-    "vuex": "^3.1.1",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^2.6.0"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
