--- a/package.json
+++ b/package.json
@@ -29,9 +29,16 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-vue": "^5.2.2",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
+    "prettier": "^1.17.1",
     "push-dir": "^0.4.1",
     "sass-loader": "^7.1.0"
   }
