--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.8.2",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/vue-fontawesome": "^0.1.6",
-    "@nuxtjs/axios": "^5.5.0",
+    "@nuxtjs/axios": "^5.5.1",
     "@nuxtjs/component-cache": "^1.1.4",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/pwa": "^2.6.0",
@@ -24,21 +24,15 @@
     "bootstrap-vue": "^2.0.0-rc.20",
     "nuxt": "^2.7.1",
     "nuxt-fontawesome": "^0.4.0",
-    "vue-gallery": "^2.0.0",
+    "vue-lazyload": "^1.2.6",
     "vue-scrollto": "^2.15.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-vue": "^5.2.2",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
-    "prettier": "^1.17.1",
     "push-dir": "^0.4.1",
     "sass-loader": "^7.1.0"
   }
