--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nuxt-fontawesome": "^0.4.0",
     "vue-lazyload": "^1.2.6",
     "vue-scrollto": "^2.15.0",
+    "vue2-google-maps": "^0.10.6",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
