--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/pwa": "^2.6.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-css-only": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.20",
     "imagemin-webp": "^5.1.0",
     "nuxt": "^2.7.1",
