--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/component-cache": "^1.1.4",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/style-resources": "^0.1.2",
     "bootstrap": "^4.3.1",
     "bootstrap-css-only": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.20",
