--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.8.2",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/vue-fontawesome": "^0.1.6",
-    "@nuxtjs/axios": "^5.5.1",
-    "@nuxtjs/component-cache": "^1.1.4",
+    "@nuxtjs/axios": "^5.5.3",
+    "@nuxtjs/component-cache": "^1.1.5",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/robots": "^2.2.0",
     "@nuxtjs/style-resources": "^0.1.2",
     "bootstrap": "^4.3.1",
     "bootstrap-css-only": "^4.3.1",
@@ -28,15 +29,18 @@
     "nuxt": "^2.7.1",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-imagemin": "^1.0.0",
+    "v-mask": "^1.3.3",
     "vue-lazyload": "^1.2.6",
     "vue-scrollto": "^2.15.0",
     "vue2-google-maps": "^0.10.6",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@nuxtjs/sitemap": "^1.2.0",
     "cross-env": "^5.2.0",
     "node-sass": "^4.12.0",
-    "nodemon": "^1.18.9",
+    "nodemon": "^1.19.1",
+    "nuxt-purgecss": "^0.2.1",
     "push-dir": "^0.4.1",
     "sass-loader": "^7.1.0"
   }
