--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "nuxt-purgecss": "^0.2.1",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "push-dir": "^0.4.1",
     "sass-loader": "^7.1.0"
   }
