--- a/package.json
+++ b/package.json
@@ -39,6 +39,13 @@
     "@nuxtjs/sitemap": "^1.2.0",
     "cross-env": "^5.2.0",
     "node-sass": "^4.12.0",
+    "autoprefixer": "^9.5.1",
+    "collect.js": "^4.12.5",
+    "dayjs": "^1.8.14",
+    "dotenv": "^8.0.0",
+    "glob-all": "^3.1.0",
+    "highlight.js": "^9.15.8",
+    "marked": "^0.6.2",
     "nodemon": "^1.19.1",
     "nuxt-purgecss": "^0.2.1",
     "pug": "^2.0.3",
