--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ POSTS_URL="https://cms.neniemsu.com/api/collections/get/posts?token=478b68417378
 
 URL="https://cms.neniemsu.com/"
 
+PROMOTIONS_URL="https://cms.neniemsu.com/api/collections/get/promotions?token=478b68417378bbac86af13a57561ef"
+
 
 apiUrl=https://cms.neniemsu.com/api
 
