--- a/package.json
+++ b/package.json
@@ -37,21 +37,25 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0",
     "@nuxtjs/sitemap": "^1.2.0",
-    "cross-env": "^5.2.0",
-    "node-sass": "^4.12.0",
     "autoprefixer": "^9.5.1",
     "collect.js": "^4.12.5",
+    "cross-env": "^5.2.0",
     "dayjs": "^1.8.14",
     "dotenv": "^8.0.0",
     "glob-all": "^3.1.0",
     "highlight.js": "^9.15.8",
+    "image-webpack-loader": "^5.0.0",
     "marked": "^0.6.2",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "nuxt-purgecss": "^0.2.1",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "push-dir": "^0.4.1",
-    "sass-loader": "^7.1.0"
+    "responsive-loader": "^1.2.0",
+    "sass-loader": "^7.1.0",
+    "sharp": "^0.22.1"
   }
 }
