added form submition capabilities via the cockpit api, basic client side validation and upgraded the webpack to fix depricated hooks warning

--- a/.env
+++ b/.env
@@ -22,3 +22,5 @@ pagesToken=478b68417378bbac86af13a57561ef
 
 # Listcollections envs
 listCollectionsToken=478b68417378bbac86af13a57561ef
+
+FORMS_TOKEN=76b685f700f08eb136788ad13eef57
