--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cross-env": "^5.2.0",
     "dayjs": "^1.8.14",
     "dotenv": "^8.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "glob-all": "^3.1.0",
     "highlight.js": "^9.15.8",
     "image-webpack-loader": "^5.0.0",
