--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nuxt": "^2.7.1",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-imagemin": "^1.0.0",
+    "nuxt-webfontloader": "^1.1.0",
     "v-mask": "^1.3.3",
     "vue-lazyload": "^1.2.6",
     "vue-scrollto": "^2.15.0",
