--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap-css-only": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.20",
     "imagemin-webp": "^5.1.0",
+    "node-fetch": "^2.6.0",
     "nuxt": "^2.8.1",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-imagemin": "^1.0.0",
