--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 
 BASE_URL="https://cms.neniemsu.com"
 
-POSTS_URL="https://cms.neniemsu.com/api/collections/get/posts?token=478b68417378bbac86af13a57561ef"
+POSTS_URL="https://cms.neniemsu.com/api/collections/get/posts?token=478b68417378bbac86af13a57561ef&rspc=1"
 
 URL="https://cms.neniemsu.com/"
 
-PROMOTIONS_URL="https://cms.neniemsu.com/api/collections/get/promotions?token=478b68417378bbac86af13a57561ef"
+PROMOTIONS_URL="https://cms.neniemsu.com/api/collections/get/promotions?token=478b68417378bbac86af13a57561ef&rspc=1"
 
 PER_PAGE=3
 
@@ -21,6 +21,6 @@ apiToken=478b68417378bbac86af13a57561ef
 pagesToken=478b68417378bbac86af13a57561ef
 
 # Listcollections envs
-listCollectionsToken=478b68417378bbac86af13a57561ef
+listCollectionsToken=478b68417378bbac86af13a57561ef&rspc=1
 
 FORMS_TOKEN=76b685f700f08eb136788ad13eef57
