updated env to add caching for the api calls

--- a/.env
+++ b/.env
@@ -15,10 +15,10 @@ baseUrl=https://cms.neniemsu.com
 
 imagePath=https://cms.neniemsu.com/storage/uploads
 
-apiToken=478b68417378bbac86af13a57561ef
+apiToken=478b68417378bbac86af13a57561ef&rspc=1
 
 # Pages envs
-pagesToken=478b68417378bbac86af13a57561ef
+pagesToken=478b68417378bbac86af13a57561ef&rspc=1
 
 # Listcollections envs
 listCollectionsToken=478b68417378bbac86af13a57561ef&rspc=1
