--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
     "nuxt-imagemin": "^1.0.0",
     "nuxt-webfontloader": "^1.1.0",
     "v-mask": "^1.3.3",
-    
-    "vue-lazyload": "^1.2.6",
     "vue-scrollto": "^2.15.0",
     "vue2-google-maps": "^0.10.6",
     "vuex": "^3.1.1"
@@ -60,6 +58,7 @@
     "push-dir": "^0.4.1",
     "responsive-loader": "^1.2.0",
     "sass-loader": "^7.1.0",
-    "sharp": "^0.22.1"
+    "sharp": "^0.22.1",
+    "vue-lazyload": "^1.2.6"
   }
 }
