--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nuxt-imagemin": "^1.0.0",
     "nuxt-webfontloader": "^1.1.0",
     "v-mask": "^1.3.3",
+    "vue-light-gallery": "^1.0.1",
     "vue-scrollto": "^2.15.0",
     "vue2-google-maps": "^0.10.6",
     "vuex": "^3.1.1"
@@ -54,8 +55,6 @@
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "nuxt-purgecss": "^0.2.1",
-    "pug": "^2.0.3",
-    "pug-plain-loader": "^1.0.0",
     "push-dir": "^0.4.1",
     "responsive-loader": "^1.2.0",
     "sass-loader": "^7.1.0",
