set up comment system for blogs

--- a/.env
+++ b/.env
@@ -9,6 +9,12 @@ PROMOTIONS_URL="https://cms.neniemsu.com/api/collections/get/promotions?token=47
 
 PER_PAGE=3
 
+APPROVE_TOKEN=478b68417378bbac86af13a57561ef
+
+SITE_URL=https://cms.neniemsu.com
+
+FRONTEND_URL=https://virus-car-detailing.netlify.com
+
 apiUrl=https://cms.neniemsu.com/api
 
 baseUrl=https://cms.neniemsu.com
@@ -24,3 +30,4 @@ pagesToken=478b68417378bbac86af13a57561ef&rspc=1
 listCollectionsToken=478b68417378bbac86af13a57561ef&rspc=1
 
 FORMS_TOKEN=76b685f700f08eb136788ad13eef57
+
