--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "nuxt-purgecss": "^0.2.1",
     "push-dir": "^0.4.1",
     "responsive-loader": "^1.2.0",
+    "sanitize-html": "^1.20.1",
     "sass-loader": "^7.1.0",
     "sharp": "^0.22.1",
     "vue-lazyload": "^1.2.6"
