--- a/package.json
+++ b/package.json
@@ -27,13 +27,18 @@
     "bootstrap-css-only": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.24",
     "imagemin-webp": "^5.1.0",
+    "intersection-observer": "^0.7.0",
     "jquery": "^3.4.1",
     "node-fetch": "^2.6.0",
     "nuxt": "^2.8.1",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-imagemin": "^1.0.0",
+    "nuxt-polyfill": "^1.0.3",
     "nuxt-webfontloader": "^1.1.0",
+    "smoothscroll-polyfill": "^0.4.4",
+    "url-polyfill": "^1.1.5",
     "v-mask": "^1.3.3",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-light-gallery": "^1.0.1",
     "vue-scrollto": "^2.15.0",
     "vue2-google-maps": "^0.10.6",
