added snipcart for the nuxt project

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ BASE_URL="https://cms.neniemsu.com"
 
 POSTS_URL="https://cms.neniemsu.com/api/collections/get/posts?token=478b68417378bbac86af13a57561ef&rspc=1"
 
+PRODUCT_URL="https://cms.neniemsu.com/api/collections/get/Product?token=478b68417378bbac86af13a57561ef&rspc=1"
+
 URL="https://cms.neniemsu.com/"
 
 PROMOTIONS_URL="https://cms.neniemsu.com/api/collections/get/promotions?token=478b68417378bbac86af13a57561ef&rspc=1"
@@ -30,4 +32,6 @@ pagesToken=478b68417378bbac86af13a57561ef&rspc=1
 listCollectionsToken=478b68417378bbac86af13a57561ef&rspc=1
 
 FORMS_TOKEN=76b685f700f08eb136788ad13eef57
+
+PRODUCT_TOKEN=478b68417378bbac86af13a57561ef
 
