removed api token visibility from code

--- a/.env
+++ b/.env
@@ -35,3 +35,5 @@ FORMS_TOKEN=76b685f700f08eb136788ad13eef57
 
 PRODUCT_TOKEN=478b68417378bbac86af13a57561ef
 
+IMAGE_URL=https://cms.neniemsu.com/api/cockpit/image?token=478b68417378bbac86af13a57561ef
+
