--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@nuxtjs/component-cache": "^1.1.5",
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/google-analytics": "^2.2.0",
-    "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/pwa": "^3.0.0-beta.16",
     "@nuxtjs/robots": "^2.2.0",
     "@nuxtjs/style-resources": "^0.1.2",
     "bootstrap": "^4.3.1",
@@ -56,7 +56,7 @@
     "glob-all": "^3.1.0",
     "highlight.js": "^9.15.8",
     "image-webpack-loader": "^5.0.0",
-    "marked": "^0.6.2",
+    "marked": "^0.6.3",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "nuxt-purgecss": "^0.2.1",
@@ -65,6 +65,6 @@
     "sanitize-html": "^1.20.1",
     "sass-loader": "^7.1.0",
     "sharp": "^0.22.1",
-    "vue-lazyload": "^1.2.6"
+    "vue-lazyload": "^1.3.1"
   }
 }
