--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "smoothscroll-polyfill": "^0.4.4",
     "url-polyfill": "^1.1.5",
     "v-mask": "^1.3.3",
-    "vue-awesome-swiper": "^3.1.3",
+    "v-owl-carousel": "^1.0.8",
     "vue-light-gallery": "^1.0.1",
     "vue-scrollto": "^2.15.0",
     "vue2-google-maps": "^0.10.6",
