--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.4.1",
     "node-fetch": "^2.6.0",
     "nuxt": "^2.8.1",
+    "nuxt-compress": "^1.0.2",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-imagemin": "^1.0.0",
     "nuxt-polyfill": "^1.0.3",
@@ -41,13 +42,13 @@
     "v-owl-carousel": "^1.0.8",
     "vue-light-gallery": "^1.0.1",
     "vue-scrollto": "^2.15.0",
-    "vue2-google-maps": "^0.10.6",
+    "vue2-google-maps": "^0.10.7",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "@nuxtjs/sitemap": "^1.2.0",
-    "autoprefixer": "^9.6.0",
+    "autoprefixer": "^9.6.1",
     "collect.js": "^4.12.6",
     "cross-env": "^5.2.0",
     "dayjs": "^1.8.14",
