--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "url-polyfill": "^1.1.7",
     "v-mask": "^1.3.4",
     "v-owl-carousel": "^1.0.8",
+    "vue-currency-filter": "^3.4.2",
     "vue-light-gallery": "^1.0.1",
     "vue-scrollto": "^2.15.0",
     "vue2-google-maps": "^0.10.7",
