--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
-    "@nuxtjs/robots": "^2.2.0",
+    "@nuxtjs/robots": "^2.3.0",
     "@nuxtjs/style-resources": "^0.1.2",
     "bootstrap": "^4.3.1",
     "bootstrap-css-only": "^4.3.1",
@@ -35,10 +35,11 @@
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-imagemin": "^1.0.0",
     "nuxt-polyfill": "^1.0.3",
+    "nuxt-storage": "^1.2.1",
     "nuxt-webfontloader": "^1.1.0",
     "smoothscroll-polyfill": "^0.4.4",
     "url-polyfill": "^1.1.7",
-    "v-mask": "^1.3.4",
+    "v-mask": "^2.0.1",
     "v-owl-carousel": "^1.0.8",
     "vue-currency-filter": "^3.4.2",
     "vue-light-gallery": "^1.0.1",
@@ -50,7 +51,7 @@
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "@nuxtjs/sitemap": "^1.2.0",
     "autoprefixer": "^9.6.1",
-    "collect.js": "^4.12.11",
+    "collect.js": "^4.14.0",
     "cross-env": "^5.2.0",
     "dayjs": "^1.8.15",
     "dotenv": "^8.0.0",
