fixed the ability of the cart to be persistent, working on cleaning up vuex

--- a/package.json
+++ b/package.json
@@ -25,17 +25,15 @@
     "@nuxtjs/style-resources": "^0.1.2",
     "bootstrap": "^4.3.1",
     "bootstrap-css-only": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.24",
+    "bootstrap-vue": "^2.0.0-rc.27",
     "imagemin-webp": "^5.1.0",
     "intersection-observer": "^0.7.0",
     "jquery": "^3.4.1",
     "node-fetch": "^2.6.0",
     "nuxt": "^2.8.1",
-    "nuxt-compress": "^1.0.2",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-imagemin": "^1.0.0",
     "nuxt-polyfill": "^1.0.3",
-    "nuxt-storage": "^1.2.1",
     "nuxt-webfontloader": "^1.1.0",
     "smoothscroll-polyfill": "^0.4.4",
     "url-polyfill": "^1.1.7",
@@ -45,13 +43,14 @@
     "vue-light-gallery": "^1.0.1",
     "vue-scrollto": "^2.15.0",
     "vue2-google-maps": "^0.10.7",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "vuex-persist": "^2.0.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "@nuxtjs/sitemap": "^1.2.0",
     "autoprefixer": "^9.6.1",
-    "collect.js": "^4.14.0",
+    "collect.js": "^4.15.0",
     "cross-env": "^5.2.0",
     "dayjs": "^1.8.15",
     "dotenv": "^8.0.0",
