--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "v-owl-carousel": "^1.0.8",
     "vue-currency-filter": "^3.4.2",
     "vue-light-gallery": "^1.0.1",
+    "vue-page-transition": "^0.2.2",
     "vue-scrollto": "^2.15.0",
     "vue2-google-maps": "^0.10.7",
     "vuex": "^3.1.1",
