--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "vue-light-gallery": "^1.0.1",
     "vue-page-transition": "^0.2.2",
     "vue-scrollto": "^2.15.0",
+    "vue-search-select": "^2.8.3",
+    "vue-select": "^3.1.0",
     "vue2-google-maps": "^0.10.7",
     "vuex": "^3.1.1",
     "vuex-persist": "^2.0.1"
