--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "vue-search-select": "^2.8.3",
     "vue-select": "^3.1.0",
     "vue2-google-maps": "^0.10.7",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.1.1",
     "vuex-persist": "^2.0.1"
   },
