--- a/package.json
+++ b/package.json
@@ -14,77 +14,88 @@
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.20",
-    "@fortawesome/free-brands-svg-icons": "^5.10.0",
-    "@fortawesome/free-solid-svg-icons": "^5.10.0",
-    "@fortawesome/vue-fontawesome": "^0.1.6",
-    "@nuxtjs/axios": "^5.5.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
+    "@nuxtjs/axios": "^5.6.0",
     "@nuxtjs/component-cache": "^1.1.5",
-    "@nuxtjs/dotenv": "^1.3.0",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
-    "@nuxtjs/robots": "^2.3.0",
-    "@nuxtjs/style-resources": "^0.1.2",
+    "@nuxtjs/robots": "^2.4.1",
     "bootstrap": "^4.3.1",
     "bootstrap-css-only": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.27",
+    "bootstrap-vue": "^2.0.2",
     "imagemin-webp": "^5.1.0",
     "intersection-observer": "^0.7.0",
     "jquery": "^3.4.1",
     "node-fetch": "^2.6.0",
-    "nuxt": "^2.8.1",
+    "nuxt": "^2.10.0",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-imagemin": "^1.0.0",
     "nuxt-polyfill": "^1.0.3",
     "smoothscroll-polyfill": "^0.4.4",
     "url-polyfill": "^1.1.7",
-    "v-mask": "^2.0.1",
+    "v-mask": "^2.0.2",
     "v-owl-carousel": "^1.0.8",
-    "vue-currency-filter": "^3.4.2",
+    "vue-currency-filter": "^3.4.3",
     "vue-light-gallery": "^1.0.1",
     "vue-page-transition": "^0.2.2",
-    "vue-scrollto": "^2.15.0",
-    "vue-search-select": "^2.8.3",
-    "vue-select": "^3.1.0",
+    "vue-scrollto": "^2.17.1",
+    "vue-search-select": "^2.9.1",
+    "vue-select": "^3.2.0",
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.1",
-    "vuex-persist": "^2.0.1",
+    "vuex-persist": "^2.1.0",
     "@nuxtjs/netlify-files": "^1.0.0",
-    "vue-analytics": "^5.17.0",
+    "vue-analytics": "^5.17.2",
     "vue-cookieconsent-component": "^1.2.0",
     "vue-if-bot": "^1.2.0",
     "vue-next-level-scroll": "^1.2.0",
     "vue-scroll-reveal": "^1.0.11"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.2.0",
-    "@nuxtjs/sitemap": "^1.2.0",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@nuxtjs/sitemap": "^2.0.0",
     "autoprefixer": "^9.6.1",
-    "babel-eslint": "^10.0.2",
-    "collect.js": "^4.16.0",
-    "cross-env": "^5.2.0",
-    "dayjs": "^1.8.15",
-    "dotenv": "^8.0.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-prettier": "^3.1.0",
+    "babel-eslint": "^10.0.3",
+    "collect.js": "^4.16.6",
+    "cross-env": "^6.0.3",
+    "dayjs": "^1.8.16",
+    "dotenv": "^8.1.0",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-transform-imports": "^2.0.0",
+    "@nuxtjs/eslint-config": "^1.1.2",
+    "@nuxtjs/eslint-module": "^1.1.0",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.2.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "eslint-plugin-nuxt": ">=0.4.3",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-html": "^6.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "glob-all": "^3.1.0",
-    "highlight.js": "^9.15.8",
-    "image-webpack-loader": "^5.0.0",
+    "highlight.js": "^9.15.10",
+    "image-webpack-loader": "^6.0.0",
     "marked": "^0.7.0",
     "node-sass": "^4.12.0",
-    "nodemon": "^1.19.1",
+    "nodemon": "^1.19.3",
     "nuxt-purgecss": "^0.2.1",
     "prettier": "^1.18.2",
     "push-dir": "^0.4.1",
     "responsive-loader": "^1.2.0",
     "sanitize-html": "^1.20.1",
-    "sass-loader": "^7.1.0",
-    "sharp": "^0.23.0",
-    "vue-lazyload": "^1.3.1"
+    "sass-loader": "^8.0.0",
+    "sharp": "^0.23.1",
+    "vue-lazyload": "^1.3.3"
   }
 }
