updated the backend location

--- a/.env
+++ b/.env
@@ -1,27 +1,27 @@
 
-BASE_URL="https://cms.neniemsu.com"
+BASE_URL="https://admin.virus.te.ua"
 
-POSTS_URL="https://cms.neniemsu.com/api/collections/get/posts?token=478b68417378bbac86af13a57561ef&rspc=1"
+POSTS_URL="https://admin.virus.te.ua/api/collections/get/posts?token=478b68417378bbac86af13a57561ef&rspc=1"
 
-PRODUCT_URL="https://cms.neniemsu.com/api/collections/get/Product?token=478b68417378bbac86af13a57561ef&rspc=1"
+PRODUCT_URL="https://admin.virus.te.ua/api/collections/get/Product?token=478b68417378bbac86af13a57561ef&rspc=1"
 
-URL="https://cms.neniemsu.com/"
+URL="https://admin.virus.te.ua/"
 
-PROMOTIONS_URL="https://cms.neniemsu.com/api/collections/get/promotions?token=478b68417378bbac86af13a57561ef&rspc=1"
+PROMOTIONS_URL="https://admin.virus.te.ua/api/collections/get/promotions?token=478b68417378bbac86af13a57561ef&rspc=1"
 
 PER_PAGE=3
 
 APPROVE_TOKEN=478b68417378bbac86af13a57561ef
 
-SITE_URL=https://cms.neniemsu.com
+SITE_URL=https://admin.virus.te.ua
 
 FRONTEND_URL=https://virus-car-detailing.netlify.com
 
-apiUrl=https://cms.neniemsu.com/api
+apiUrl=https://admin.virus.te.ua/api
 
-baseUrl=https://cms.neniemsu.com
+baseUrl=https://admin.virus.te.ua
 
-imagePath=https://cms.neniemsu.com/storage/uploads
+imagePath=https://admin.virus.te.ua/storage/uploads
 
 apiToken=478b68417378bbac86af13a57561ef&rspc=1
 
@@ -35,5 +35,5 @@ FORMS_TOKEN=76b685f700f08eb136788ad13eef57
 
 PRODUCT_TOKEN=478b68417378bbac86af13a57561ef
 
-IMAGE_URL=https://cms.neniemsu.com/api/cockpit/image?token=478b68417378bbac86af13a57561ef
+IMAGE_URL=https://admin.virus.te.ua/api/cockpit/image?token=478b68417378bbac86af13a57561ef
 
