--- a/.env
+++ b/.env
@@ -1,21 +1,21 @@
 
-BASE_URL="https://admin.virus.te.ua"
+BASE_URL=https://admin.virus.te.ua
 
-POSTS_URL="https://admin.virus.te.ua/api/collections/get/posts?token=478b68417378bbac86af13a57561ef&rspc=1"
+POSTS_URL=https://admin.virus.te.ua/api/collections/get/posts?token=9fc49d5af4dda3c961d71b489540a4
 
-PRODUCT_URL="https://admin.virus.te.ua/api/collections/get/Product?token=478b68417378bbac86af13a57561ef&rspc=1"
+PRODUCT_URL='https://admin.virus.te.ua/api/collections/get/Product?token=9fc49d5af4dda3c961d71b489540a4'
 
-URL="https://admin.virus.te.ua/"
+URL=https://admin.virus.te.ua/
 
-PROMOTIONS_URL="https://admin.virus.te.ua/api/collections/get/promotions?token=478b68417378bbac86af13a57561ef&rspc=1"
+PROMOTIONS_URL=https://admin.virus.te.ua/api/collections/get/promotions?token=9fc49d5af4dda3c961d71b489540a4
 
 PER_PAGE=3
 
-APPROVE_TOKEN=478b68417378bbac86af13a57561ef
+APPROVE_TOKEN=9fc49d5af4dda3c961d71b489540a4
 
 SITE_URL=https://admin.virus.te.ua
 
-FRONTEND_URL=https://virus-car-detailing.netlify.com
+FRONTEND_URL=https://beta.virus.te.ua/
 
 apiUrl=https://admin.virus.te.ua/api
 
@@ -23,17 +23,17 @@ baseUrl=https://admin.virus.te.ua
 
 imagePath=https://admin.virus.te.ua/storage/uploads
 
-apiToken=478b68417378bbac86af13a57561ef&rspc=1
+apiToken=9fc49d5af4dda3c961d71b489540a4
 
 # Pages envs
-pagesToken=478b68417378bbac86af13a57561ef&rspc=1
+pagesToken=9fc49d5af4dda3c961d71b489540a4
 
 # Listcollections envs
-listCollectionsToken=478b68417378bbac86af13a57561ef&rspc=1
+listCollectionsToken=9fc49d5af4dda3c961d71b489540a4
 
-FORMS_TOKEN=76b685f700f08eb136788ad13eef57
+FORMS_TOKEN=00c9e43284a689ed7bf9a7fc972e81
 
-PRODUCT_TOKEN=478b68417378bbac86af13a57561ef
+PRODUCT_TOKEN=9fc49d5af4dda3c961d71b489540a4
 
-IMAGE_URL=https://admin.virus.te.ua/api/cockpit/image?token=478b68417378bbac86af13a57561ef
+IMAGE_URL=https://admin.virus.te.ua/api/cockpit/image?token=9fc49d5af4dda3c961d71b489540a4
 
