--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@nuxtjs/component-cache": "^1.1.5",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/google-tag-manager": "^2.2.1",
+    "@nuxtjs/netlify-files": "^1.0.0",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
     "@nuxtjs/robots": "^2.4.1",
     "bootstrap": "^4.3.1",
@@ -39,22 +41,21 @@
     "url-polyfill": "^1.1.7",
     "v-mask": "^2.0.2",
     "v-owl-carousel": "^1.0.8",
+    "vue-analytics": "^5.17.2",
+    "vue-cookieconsent-component": "^1.2.0",
     "vue-currency-filter": "^3.4.3",
+    "vue-if-bot": "^1.2.0",
     "vue-light-gallery": "^1.0.1",
+    "vue-next-level-scroll": "^1.2.0",
     "vue-page-transition": "^0.2.2",
+    "vue-scroll-reveal": "^1.0.11",
     "vue-scrollto": "^2.17.1",
     "vue-search-select": "^2.9.1",
     "vue-select": "^3.2.0",
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.1",
-    "vuex-persist": "^2.1.0",
-    "@nuxtjs/netlify-files": "^1.0.0",
-    "vue-analytics": "^5.17.2",
-    "vue-cookieconsent-component": "^1.2.0",
-    "vue-if-bot": "^1.2.0",
-    "vue-next-level-scroll": "^1.2.0",
-    "vue-scroll-reveal": "^1.0.11"
+    "vuex-persist": "^2.1.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
