--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.1",
-    "vuex-persist": "^2.1.1"
+    "vuex-persist": "^2.1.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
