added all prices to services, set filter to show import parts only, and added mobile filter section

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Virus",
+  "name": "virus",
   "version": "1.0.0",
   "description": "Детейлінг студія Virus - комплексний догляд за Вашим авто. Передпродажна підготовка, хімчистка салону, полірування кузова, керамічне покритя, перетяжка руля, реставрація шкіри.",
   "author": "W-Start",
