added all videos from youtube and image optimization

--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "update": "git pull && npm i && npm run generate && pm2 restart virus"
   },
   "dependencies": {
+    "@bazzite/nuxt-optimized-images": "^0.2.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
-    "@nuxtjs/axios": "^5.7.1",
+    "@nuxtjs/axios": "^5.8.0",
     "@nuxtjs/component-cache": "^1.1.5",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/google-analytics": "^2.2.1",
     "@nuxtjs/google-tag-manager": "^2.3.0",
     "@nuxtjs/netlify-files": "^1.0.0",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
@@ -30,15 +31,22 @@
     "bootstrap": "^4.3.1",
     "bootstrap-css-only": "^4.3.1",
     "bootstrap-vue": "^2.0.4",
+    "imagemin-gifsicle": "^6.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "imagemin-svgo": "^7.0.0",
     "imagemin-webp": "^5.1.0",
     "intersection-observer": "^0.7.0",
+    "jimp": "^0.8.5",
     "jquery": "^3.4.1",
+    "lqip-loader": "^2.2.0",
     "node-fetch": "^2.6.0",
     "nuxt": "^2.10.2",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-imagemin": "^1.0.0",
     "nuxt-polyfill": "^1.0.3",
     "smoothscroll-polyfill": "^0.4.4",
+    "sqip-loader": "^0.2.0",
     "url-polyfill": "^1.1.7",
     "v-mask": "^2.0.2",
     "v-owl-carousel": "^1.0.8",
@@ -56,40 +64,41 @@
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.1",
     "vuex-persist": "^2.1.1",
+    "webp-loader": "^0.5.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@nuxtjs/eslint-config": "^1.1.2",
+    "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/sitemap": "^2.0.0",
-    "autoprefixer": "^9.6.5",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "autoprefixer": "^9.7.0",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-transform-imports": "^2.0.0",
     "collect.js": "^4.18.1",
     "cross-env": "^6.0.3",
     "dayjs": "^1.8.16",
     "dotenv": "^8.2.0",
-    "babel-jest": "^24.9.0",
-    "babel-plugin-transform-imports": "^2.0.0",
-    "@nuxtjs/eslint-config": "^1.1.2",
-    "@nuxtjs/eslint-module": "^1.1.0",
-    "@nuxtjs/style-resources": "^1.0.0",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "eslint-plugin-nuxt": ">=0.4.3",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-config-standard": "^14.1.0",
+    "eslint-loader": "^3.0.2",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-nuxt": ">=0.4.3",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^5.2.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "glob-all": "^3.1.0",
     "highlight.js": "^9.15.10",
     "image-webpack-loader": "^6.0.0",
     "marked": "^0.7.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "nodemon": "^1.19.4",
     "nuxt-purgecss": "^0.2.1",
     "prettier": "^1.18.2",
@@ -97,7 +106,7 @@
     "responsive-loader": "^1.2.0",
     "sanitize-html": "^1.20.1",
     "sass-loader": "^8.0.0",
-    "sharp": "^0.23.1",
+    "sharp": "^0.23.2",
     "vue-lazyload": "^1.3.3"
   }
 }
