--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/netlify-files": "^1.0.0",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
     "@nuxtjs/robots": "^2.4.2",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.3.1",
     "bootstrap-css-only": "^4.3.1",
     "bootstrap-vue": "^2.0.4",
