--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
-    "update": "git pull && npm i && npm run generate && pm2 restart virus"
+    "gen-update": "git pull && npm i && npm run generate && pm2 restart virus",
+    "build-update": "git pull && npm i && npm run build && pm2 restart virus"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/vue-fontawesome": "^0.1.7",
+    "@fortawesome/vue-fontawesome": "^0.1.8",
     "@nuxtjs/axios": "^5.8.0",
     "@nuxtjs/component-cache": "^1.1.5",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/google-analytics": "^2.2.1",
-    "@nuxtjs/google-tag-manager": "^2.3.0",
+    "@nuxtjs/google-tag-manager": "^2.3.1",
     "@nuxtjs/netlify-files": "^1.0.0",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
     "@nuxtjs/robots": "^2.4.2",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.3.1",
     "bootstrap-css-only": "^4.3.1",
-    "bootstrap-vue": "^2.0.4",
+    "bootstrap-vue": "^2.1.0",
     "intersection-observer": "^0.7.0",
     "jquery": "^3.4.1",
     "jw-vue-pagination": "^1.0.3",
@@ -42,7 +43,7 @@
     "url-polyfill": "^1.1.7",
     "v-mask": "^2.0.2",
     "v-owl-carousel": "^1.0.8",
-    "vue-analytics": "^5.17.2",
+    "vue-analytics": "^5.18.0",
     "vue-cookieconsent-component": "^1.2.0",
     "vue-currency-filter": "^3.4.3",
     "vue-disqus": "^3.0.5",
@@ -53,7 +54,7 @@
     "vue-select": "^3.2.0",
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.4",
-    "vuex": "^3.1.1",
+    "vuex": "^3.1.2",
     "vuex-persist": "^2.1.1",
     "webp-loader": "^0.5.0",
     "whatwg-fetch": "^3.0.0"
@@ -62,42 +63,42 @@
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "@nuxtjs/eslint-config": "^1.1.2",
     "@nuxtjs/eslint-module": "^1.1.0",
-    "@nuxtjs/sitemap": "^2.0.0",
+    "@nuxtjs/sitemap": "^2.0.1",
     "@nuxtjs/style-resources": "^1.0.0",
-    "autoprefixer": "^9.7.0",
+    "autoprefixer": "^9.7.2",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-plugin-transform-imports": "^2.0.0",
-    "collect.js": "^4.18.1",
+    "collect.js": "^4.18.9",
     "cross-env": "^6.0.3",
-    "dayjs": "^1.8.16",
+    "dayjs": "^1.8.17",
     "dotenv": "^8.2.0",
     "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-nuxt": ">=0.4.3",
+    "eslint-plugin-nuxt": ">=0.5.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^5.2.3",
+    "eslint-plugin-vue": "^6.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "glob-all": "^3.1.0",
-    "highlight.js": "^9.15.10",
+    "highlight.js": "^9.16.2",
     "image-webpack-loader": "^6.0.0",
     "marked": "^0.7.0",
     "node-sass": "^4.13.0",
     "nodemon": "^1.19.4",
     "nuxt-purgecss": "^0.2.1",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "push-dir": "^0.4.1",
     "responsive-loader": "^1.2.0",
     "sanitize-html": "^1.20.1",
     "sass-loader": "^8.0.0",
-    "sharp": "^0.23.2",
+    "sharp": "^0.23.3",
     "vue-lazyload": "^1.3.3"
   }
 }
