--- a/package.json
+++ b/package.json
@@ -16,89 +16,92 @@
     "build-update": "git pull && npm i && npm run build && pm2 restart virus"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/vue-fontawesome": "^0.1.8",
-    "@nuxtjs/axios": "^5.8.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/component-cache": "^1.1.5",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/google-analytics": "^2.2.1",
+    "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/google-tag-manager": "^2.3.1",
     "@nuxtjs/netlify-files": "^1.0.0",
-    "@nuxtjs/pwa": "^3.0.0-beta.16",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@nuxtjs/robots": "^2.4.2",
     "aos": "^3.0.0-beta.6",
-    "bootstrap": "^4.3.1",
-    "bootstrap-css-only": "^4.3.1",
-    "bootstrap-vue": "^2.1.0",
+    "bootstrap": "^4.4.1",
+    "bootstrap-css-only": "^4.4.1",
+    "bootstrap-vue": "^2.4.0",
     "intersection-observer": "^0.7.0",
     "jquery": "^3.4.1",
     "jw-vue-pagination": "^1.0.3",
     "node-fetch": "^2.6.0",
-    "nuxt": "^2.10.2",
+    "nuxt": "^2.11.0",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-polyfill": "^1.0.3",
     "smoothscroll-polyfill": "^0.4.4",
-    "url-polyfill": "^1.1.7",
+    "url-polyfill": "^1.1.8",
     "v-mask": "^2.0.2",
     "v-owl-carousel": "^1.0.8",
-    "vue-analytics": "^5.18.0",
+    "vue": "^2.6.6",
+    "vue-analytics": "^5.22.1",
     "vue-cookieconsent-component": "^1.2.0",
-    "vue-currency-filter": "^3.4.3",
+    "vue-currency-filter": "^4.0.3",
     "vue-disqus": "^3.0.5",
     "vue-if-bot": "^1.2.0",
     "vue-light-gallery": "^1.0.1",
     "vue-page-transition": "^0.2.2",
     "vue-scrollto": "^2.17.1",
-    "vue-select": "^3.2.0",
+    "vue-select": "^3.4.0",
+    "vue-server-renderer": "^2.6.6",
+    "vue-template-compiler": "^2.6.6",
     "vue2-google-maps": "^0.10.7",
-    "vuelidate": "^0.7.4",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.1.2",
-    "vuex-persist": "^2.1.1",
-    "webp-loader": "^0.5.0",
+    "vuex-persist": "^2.2.0",
+    "webp-loader": "^0.6.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.3.0",
-    "@nuxtjs/eslint-config": "^1.1.2",
+    "@fullhuman/postcss-purgecss": "^2.0.6",
+    "@nuxtjs/eslint-config": "^2.0.2",
     "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/sitemap": "^2.0.1",
     "@nuxtjs/style-resources": "^1.0.0",
-    "autoprefixer": "^9.7.2",
+    "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "^25.1.0",
     "babel-plugin-transform-imports": "^2.0.0",
-    "collect.js": "^4.18.9",
-    "cross-env": "^6.0.3",
-    "dayjs": "^1.8.17",
+    "collect.js": "^4.20.3",
+    "cross-env": "^7.0.0",
+    "dayjs": "^1.8.20",
     "dotenv": "^8.2.0",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.7.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.0",
-    "eslint-loader": "^3.0.2",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-nuxt": ">=0.5.0",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-nuxt": ">=0.5.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.0.1",
+    "eslint-plugin-vue": "^6.1.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "glob-all": "^3.1.0",
-    "highlight.js": "^9.16.2",
+    "highlight.js": "^9.18.1",
     "image-webpack-loader": "^6.0.0",
-    "marked": "^0.7.0",
-    "node-sass": "^4.13.0",
-    "nodemon": "^1.19.4",
+    "marked": "^0.8.0",
+    "node-sass": "^4.13.1",
+    "nodemon": "^2.0.2",
     "nuxt-purgecss": "^0.2.1",
     "prettier": "^1.19.1",
     "push-dir": "^0.4.1",
     "responsive-loader": "^1.2.0",
-    "sanitize-html": "^1.20.1",
-    "sass-loader": "^8.0.0",
-    "sharp": "^0.23.3",
+    "sanitize-html": "^1.21.1",
+    "sass-loader": "^8.0.2",
+    "sharp": "^0.24.0",
     "vue-lazyload": "^1.3.3"
   }
 }
