--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@nuxtjs/apollo": "^4.0.0-rc19",
     "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/component-cache": "^1.1.5",
     "@nuxtjs/dotenv": "^1.4.1",
@@ -43,7 +44,7 @@
     "url-polyfill": "^1.1.8",
     "v-mask": "^2.0.2",
     "v-owl-carousel": "^1.0.8",
-    "vue": "^2.6.6",
+    "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
     "vue-cookieconsent-component": "^1.2.0",
     "vue-currency-filter": "^4.0.3",
@@ -53,8 +54,8 @@
     "vue-page-transition": "^0.2.2",
     "vue-scrollto": "^2.17.1",
     "vue-select": "^3.4.0",
-    "vue-server-renderer": "^2.6.6",
-    "vue-template-compiler": "^2.6.6",
+    "vue-server-renderer": "^2.6.11",
+    "vue-template-compiler": "^2.6.11",
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.5",
     "vuex": "^3.1.2",
