converting keys to env variable and code refactoring

--- a/.env
+++ b/.env
@@ -1,39 +1,11 @@
+API_GQL_LINK='https://admin.virus.te.ua/api/graphql/query?token=f929e164a70313603d610994dcb4d2'
 
-BASE_URL=https://admin.virus.te.ua
+IMAGE_LINK='https://admin.virus.te.ua/api/cockpit/image?token=9fc49d5af4dda3c961d71b489540a4&rspc=1&w=200&h=200&f[brighten]=0&o=true&src='
 
-POSTS_URL=https://admin.virus.te.ua/api/collections/get/posts?token=9fc49d5af4dda3c961d71b489540a4
+IMAGE_LINK_DYNAMIC='https://admin.virus.te.ua/api/cockpit/image?token=9fc49d5af4dda3c961d71b489540a4&rspc=1'
 
-PRODUCT_URL='https://admin.virus.te.ua/api/collections/get/Product?token=9fc49d5af4dda3c961d71b489540a4'
+MAPS_API_KEY='AIzaSyDf7ZghK10USNQvPgv0um7a1tFbZ32RA-A'
 
-URL=https://admin.virus.te.ua/
+GOOGLE_ANALYTICS_API_KEY='UA-62479125-9'
 
-PROMOTIONS_URL=https://admin.virus.te.ua/api/collections/get/promotions?token=9fc49d5af4dda3c961d71b489540a4
-
-PER_PAGE=5
-
-APPROVE_TOKEN=9fc49d5af4dda3c961d71b489540a4
-
-SITE_URL=https://admin.virus.te.ua
-
-FRONTEND_URL=https://beta.virus.te.ua/
-
-apiUrl=https://admin.virus.te.ua/api
-
-baseUrl=https://admin.virus.te.ua
-
-imagePath=https://admin.virus.te.ua/storage/uploads
-
-apiToken=9fc49d5af4dda3c961d71b489540a4
-
-# Pages envs
-pagesToken=9fc49d5af4dda3c961d71b489540a4
-
-# Listcollections envs
-listCollectionsToken=9fc49d5af4dda3c961d71b489540a4
-
-FORMS_TOKEN=00c9e43284a689ed7bf9a7fc972e81
-
-PRODUCT_TOKEN=9fc49d5af4dda3c961d71b489540a4
-
-IMAGE_URL=https://admin.virus.te.ua/api/cockpit/image?token=9fc49d5af4dda3c961d71b489540a4
-
+JIVO_CHAT_WIDGET_ID='j9oYCawnP2'
