set keys to env and some refactoring

--- a/.env
+++ b/.env
@@ -6,6 +6,10 @@ IMAGE_LINK_DYNAMIC='https://admin.virus.te.ua/api/cockpit/image?token=9fc49d5af4
 
 MAPS_API_KEY='AIzaSyDf7ZghK10USNQvPgv0um7a1tFbZ32RA-A'
 
-GOOGLE_ANALYTICS_API_KEY='UA-62479125-9'
+GOOGLE_ANALYTICS_API_ID='UA-62479125-9'
+
+GOOGLE_TAGS_API_ID='GTM-WT77NZ5'
 
 JIVO_CHAT_WIDGET_ID='j9oYCawnP2'
+
+VUE_DISQUS_SHORTNAME='https-beta-virus-te-ua'
