--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+URL='https://virus.te.ua/'
+
 API_GQL_LINK='https://admin.virus.te.ua/api/graphql/query?token=f929e164a70313603d610994dcb4d2'
 
 IMAGE_LINK='https://admin.virus.te.ua/api/cockpit/image?token=9fc49d5af4dda3c961d71b489540a4&rspc=1&w=200&h=200&f[brighten]=0&o=true&src='
