--- a/.gitignore
+++ b/.gitignore
@@ -78,8 +78,15 @@ dist
 # Serverless directories
 .serverless
 
-# IDE
+# IDE / Editor
 .idea
+.editorconfig
 
 # Service worker
 sw.*
+
+# Mac OSX
+.DS_Store
+
+# Vim swap files
+*.swp
